# json_tagger

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
json_tagger/: __init__.py  dataset_json.py
json_tagger/utils/: __init__.py  nested_get.py
